# python-plugin-data-loader

./: .gitignore  .readthedocs.yaml  .travis.yml  Makefile  Pipfile  README.md  conf.py  pyproject.toml  setup.py
.github/workflows/: publish-pypi.yml
ci/: requirements-dev.txt  requirements-doc.txt  requirements.txt
data_loader_plugin/: __init__.py  base.py
docs/: conf.py  searchindex.js
docs/doctrees/: README.doctree  environment.pickle
docs/html/: .buildinfo  README.html  genindex.html  objects.inv  search.html
src/data_loader_plugin/: __init__.py  base.py  copyfile.py  s3.py
tests/: test_copyfile.py  test_s3.py
